# BansheeBot_old

./: .gitignore  Dockerfile  README.md  TODO  alembic.ini  docker-compose.yml  example.env  pyproject.toml  requirements.txt  test.py
.github/workflows/: build_workflow.yml  dev.workflow.yml  main.workflow.yml  prod.workflow.yml  python-app.yml
bot/: __main__.py
bot/commands/: character_cog.py
bot/raiderIO/: __init__.py
bot/raiderIO/models/: character.py
bot/raiderIO/schemas/: schema.py
bot/views/: character_views.py
migrations/: env.py
migrations/versions/: 3a2fc8480206_init.py  456da342209b_added_character_and_guild_orms.py  50985128dacd_init.py  782004c9aeda_updated_setting.py  8581dbe3442e_added_raider_role_to_char.py  abbfbd0386ed_added_item_level_requirements.py
scripts/: migration.bat
src/: __init__.py  __main__.py  config.py  dependencies.py  entities.py  injector.py  main.py  mapper.py  models.py
src/bot/: __init__.py  bot.py
src/cogs/: __init__.py  admin_cog.py  base.py  character_cog.py  general_cog.py  guild_cog.py  raid_cog.py  setting_cog.py
src/commands/: admin_cog.py  character_cog.py  general_cog.py  guild_cog.py  raid_cog.py  setting_cog.py
src/context/: __init__.py  custom.py  manager.py
src/db/: __init__.py  base.py  character.py  database.py  dto.py  guild.py  interfaces.py  migrations.py  mocks.py  models.py  repositories.py  repository.py  session.py  settings.py
src/db/models/: __init__.py  character.py  guild.py  setting.py
src/db/repositories/: __init__.py  base.py  character.py  guild.py  interfaces.py  mocks.py  setting.py  settings.py
src/entities/: __init__.py  character.py  guild.py  setting.py
src/models/: __init__.py
src/raiderIO/: __init__.py  client.py  interface.py  mock_response.py  models.py
src/raiderIO/models/: __init__.py  character.py  guild.py
src/raiderIO/schemas/: schema.py
src/services/: __init__.py  base.py  characterService.py  guildService.py  interface.py  interfaces.py  settingsService.py
src/utils/: __init__.py  realms.json
src/views/: __init__.py  admin_views.py  character_views.py  guild_views.py  raid.py  setting.py  settings_view.py  viewmodels.py
tests/: guild_service_tests.py  test_character_service.py  test_guild_service.py
tests/data/: raider_io_guild.json  test_data.json
