[tool.poetry]
name = "BansheeBot"
version = "0.1.0"
description = "A discord bot for The Revenants' World of Warcraft guild"
authors = ["Koalth"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.5.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
datetime = "^5.4"
sqlalchemy = "^2.0.25"
sqlmodel = "^0.0.19"
aiohttp = "^3.9.5"
aiolimiter = "^1.1.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
inject = "^5.2.1"
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"

[tool.poetry.scripts]
bot = 'src:main'
migrate = 'src.db.migrations:migrate'
destroy = 'src.db.migrations:destroy'
reset = 'src.db.migrations:reset'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
